.deploy/manifests/webhook/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: argocd-pod-enrichment
webhooks:
  - name: argocd-pod-enrichment.codefresh.io
    clientConfig:
      service:
        name: argocd-pod-enrichment-webhook
        namespace: default
        path: /mutate
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNwakNDQVk0Q0NRQ0JYQlZ3SjN3akF6QU5CZ2txaGtpRzl3MEJBUXNGQURBVk1STXdFUVlEVlFRRERBcFgKWldKb2IyOXJJRU5CTUI0WERUSTFNVEF5TWpFeU1UTXpNVm9YRFRJMk1UQXlNakV5TVRNek1Wb3dGVEVUTUJFRwpBMVVFQXd3S1YyVmlhRzl2YXlCRFFUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCCkFMS29xWTZTZXJkcStGYzdFdWt1ZzJHTnprakxWMktaUFNkdEJ5NG1jU0ZvZ2Ftb3VQV3F1RW9SKzQxanliZEYKdHJSM2liMkY0NmJZUVA3b2pPKzBudGJRTEpESWZycFhpTFpUeS9zaGJ6UW42VGdVTnVNOENVdHFDQmJEdTk3Ywp2bUNDUy8yL2t [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
